Implemented product_number
